Fix bug where viewport defaulted white background on safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -119,8 +119,12 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    background-color: #000;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-black text-foreground;
+    min-height: 100dvh;
   }
 }
 
